--- a/index.html
+++ b/index.html
@@ -35,28 +35,31 @@
 		<section class="who">
 			<h1>Well hello there stranger</h1>
 			<p><span class="white">This is the personal website of Lucian Alexe, a jack of all trades when it comes to all things visual.</span> I love experimenting and throughout the years I had the chance to work in a broad range of mediums: video + motion graphics, graphic design, desktop publishing, web design + development, data vizualizations and more.</p>
-			<p>Currently working and living in Belgium, where I’m enjoying its breath-taking Art Nouveau architecture and the large selection of beers. I recently got into running and kayaking, so it might see me doing rounds in Bois de la Cambre or checking the level or rivers in the Ardennes.</p>
+			<p>Currently working and living in Belgium, where I’m enjoying its breath-taking Art Nouveau architecture and the large selection of beers. I recently got into running and kayaking, so it might see me doing rounds in Bois de la Cambre or rowing in the Ardennes.</p>
 		</section>
 
 		<section class="what">
-			<p>You should click the shiny buttons:</p>
+			<p>Doing my best to keep the following updated:</p>
 		<div class="buttons">
-			<i class="fab fa-dribbble"></i> 
-			<i class="fab fa-behance"></i> 
-			<i class="fab fa-instagram"></i> 
-			<i class="fas fa-camera"></i> 
-			<i class="fab fa-medium-m"></i> 
+			<a href="https://dribbble.com/lucian_alexe" class="dribbble" target="_blank"><i class="fab fa-dribbble"></i></a> 
+			<a href="https://www.behance.net/Lucian_Alexe" class="behance" target="_blank"><i class="fab fa-behance"></i> </a> 
+			<a href="https://unsplash.com/@lucian_alexe" class="unsplash" target="_blank"><i class="fas fa-camera"></i> </a>
+			<a href="https://www.instagram.com/lucian_alexe/" class="instagram" target="_blank"><i class="fab fa-instagram"></i> </a>
+			<a href="https://www.youtube.com/channel/UCESFV43pElWjsR2g1MfffWw/videos" class="youtube" target="_blank"><i class="fab fa-youtube"></i> </a> 
+			<a href="https://medium.com/@lucian_alexe/" class="medium" target="_blank"><i class="fab fa-medium-m"></i></a>  
 			
 		</div>
 		</section>
 		
-		<section class="medium">
-			<p>I sometimes write</p>
-			<div id="jsonContent">
-			
-			</div>
+		<section class="medium-section">
+			<h2 class="white">I sometimes write</h2>
+				  <ul class="medium-posts">
+					Posts go here
+				  </ul>
 		</section>
-		
+		<section class="footer">
+			<p>Lucian Alexe - 2020</p>
+		</section>
 		
 	</div>	
 	
